--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ h1,h2,h3,h4,h5,h6 {
     <td>&nbsp;</td>
     <td>&nbsp;</td>
     <td height="171" align="left" valign="top" class="FQR"><p class="G"> 友情链接 </p>
-      <p class="asdf"><span class="FQR"><span class="WRQ"><span class="wwd"><span class="jdw"><a href="https://www.schlibra.tk/" class="FGW"><span class="w">星辰工作室Stars官网</span></a></span></span></span></span></p>
+      <p class="asdf"><span class="FQR"><span class="WRQ"><span class="wwd"><span class="jdw"><a href="https://ai.xcgzs.ml/" class="FGW"><span class="w">星辰工作室Stars官网</span></a></span></span></span></span></p>
       <p class="asdf">&nbsp;</p>
       <p class="asdf">&nbsp;</p>
     <p><span class="FQR">..........................................................................</span><span class="我去">©2019-2020 凡灵星制团作版权所有</span></p></td>
